0030695: Visualization - selection by box should use clipping planes set for viewer